Sat Jul 12 22:17:26 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (sizeof ptrdiff_t): check for size of ptrdiff_t.

	* include/ruby/ruby.h (PRI?PTRDIFF, PRI?SIZE): printf conversion
	  specifiers for ptrdiff_t and size_t/ssize_t.

	* insns.def (leave), marshal.c (long_toobig), transcode.c
	  (str_transcode), vm_dump.c (control_frame_dump, stack_dump_each),
	  (debug_print_register, debug_print_pre): t and z length modifiers
	  are C99.

Sat Jul 12 16:02:31 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/xmlrpc/client.rb (XMLRPC::Client#do_rpc): requires
	  webrick/cookie.  [ ruby-Bugs-21139 ]

Sat Jul 12 09:25:07 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_event.rb: add test
	  for WIN32OLE_EVENT#on_event_with_outargs

	* test/win32ole/test_win32ole_event.rb(teardown): calling 
	  WIN32OLE_EVENT.message_loop

Sat Jul 12 01:54:13 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_select): shoudn't pass non-socket handle to
	  original select().

Fri Jul 11 23:05:40 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/zlib/test_zlib.rb: add a test for Zlib::Deflate#params.

Fri Jul 11 22:58:28 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/zlib/zlib.c (rb_deflate_params): flush before deflateParams.
	  [ruby-core:17675]

Fri Jul 11 22:09:01 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/setup.rb, win32/Makefile.sub (PLATFORM): use $(PLATFORM)
	  instead of $(OS) because ENV["OS"] is used in test-all (drb).

Fri Jul 11 20:51:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_wait_readable, rb_io_wait_writable): check if the file
	  descriptor is closed.

	* thread.c (rb_thread_wait_fd_rw): ditto.

Fri Jul 11 16:16:43 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_accept, rb_w32_socket, rb_w32_socketpair):
	  prohibit inheritance of sockets, too. [experimental]

Fri Jul 11 14:39:49 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
